--- a/css/content.css
+++ b/css/content.css
@@ -220,7 +220,7 @@ html, body{
     width:97%;
     position:relative;
     padding:0 1.5%;
-    margin-bottom:1%;
+    margin:1% 0;
 }
 
 .white_text{
@@ -407,3 +407,189 @@ html, body{
     float:right;
 }
 
+/***************/
+/*UXUI Research*/
+/***************/
+.back_circle{
+    border-radius: 50%;
+    background: linear-gradient(to right, rgb(0, 200, 255) , rgb(255, 255, 177));
+    width: 70px;
+    height: 70px;
+    margin: 17% 0 0 10%;
+    position: absolute;
+    box-shadow: 1px 1px 5px rgba(0,0,0,.5);;
+}
+
+.back_circle:hover{
+    background: linear-gradient(to right, rgb(0, 160, 204) , rgb(189, 189, 0));
+}
+
+.arrow {
+    border: solid white;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 8px;
+    margin: 33% 0 0 37%;
+  }
+
+  .left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+  }
+
+section{
+    height:auto;
+    overflow:hidden;
+    padding:2% 0;
+}
+
+.first_section{
+    padding-top:3%;
+}
+
+.section_block{
+    height:auto;
+    width:100%;
+    /*background-color:skyblue;*/
+    margin:0 auto;
+    padding:1% 0;
+    overflow:hidden;
+}
+
+.section_title{
+    font-size:25px;
+}
+
+.border_span{
+    border:2px solid black;
+    width:90%;
+    height:auto;
+    position:relative;
+    margin:auto;
+    overflow: hidden;
+}
+
+.section_des_left{
+    background-color: white;
+    width: 68%;
+    height: 200px;
+    float: left;
+    padding:1%;
+}
+
+.section_des_right{
+    padding:1%;
+    background-color:orange;
+    width:28%;
+    height:200px;
+    float:right;
+    position:relative;
+    overflow:hidden;
+    font-size:12px;
+    line-height:20px;
+}
+
+.grey_block{
+    background-color:rgb(248, 248, 248);
+    padding:3% 0;
+}
+
+.block_1_link:hover{
+    background: linear-gradient(to right, rgb(255, 255, 255), rgb(0, 200, 255));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border-color:black;
+}
+
+.block_link{
+    bottom: 0;
+    position: absolute;
+    width:70%;
+    margin-bottom: 3%;
+    text-align: right;
+    right: 10px;
+}
+
+.block_1_link{
+    font-size: 15px;
+    font-weight: 700;
+    width: 100%;
+    background: linear-gradient(to right, rgb(0, 200, 255) , yellow);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.block_sec_1, .block_sec_2, .block_sec_3{
+    width: 27%;
+    float: left;
+    margin: 1% 1.5%;
+    padding: 1%;
+}
+
+.block_sec_1 img, .block_sec_2 img, .block_sec_3 img{
+    width:100%;
+    margin:25px 0;
+}
+
+.three_blocks_container{
+    position:relative;
+    width:100%;
+    overflow: overlay;
+}
+
+.element_list{
+    text-align:center;
+}
+
+.element_list li{
+    display:inline-block;
+    padding:.5% 2%;
+    margin:1%;
+    background: linear-gradient(to right, rgb(0, 184, 235) , rgb(233, 233, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+/**PERSONAL**/
+.persona_img img{
+    width: 70%;
+    border-radius: 100%;
+    margin: 5% 0;
+}
+
+.persona_title{
+    font-size:30px;
+    font-weight:800;
+}
+
+.persona_img{
+    width: 60%;
+    margin: auto;
+    text-align: center;
+}
+
+.persona_bio{
+    width:100%;
+    margin:auto;
+    padding-top:10px;
+}
+
+.persona_bio p{
+    margin-bottom:20px;
+    line-height:17px;
+}
+
+.persona_label{
+    background-color:rgb(65, 214, 255);
+    padding:2px 5px;
+    margin-right:5px;
+    color:white;
+    border-radius:5px;
+}
+
+.bio_block{
+    background-color:rgb(65, 214, 255);
+    padding:2px;
+    border-radius:5px;
+}
