--- a/css/content.css
+++ b/css/content.css
@@ -611,16 +611,17 @@ section{
 }
 
 .persona_label{
-    background-color:rgb(65, 214, 255);
-    padding:2px 5px;
-    margin-right:5px;
-    color:white;
-    border-radius:5px;
+    /*background-color: rgba(106, 170, 190,1); */
+    padding: 1px 1px;
+    margin-right: 5px;
+    font-size: 18px;
+    background: linear-gradient(to right, rgb(0, 184, 235) , rgb(233, 233, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .bio_block{
-    background-color:rgb(65, 214, 255);
-    padding:2px;
-    border-radius:5px;
+    padding: 5px;
+    border-radius: 5px;
     min-height: 200px;
 }
