--- a/css/content.css
+++ b/css/content.css
@@ -220,7 +220,7 @@ html, body{
     width:97%;
     position:relative;
     padding:0 1.5%;
-    margin:1% 0;
+    margin:2% 0;
 }
 
 .white_text{
@@ -387,6 +387,7 @@ html, body{
     height:auto;
     position: relative;
     float: left;
+    overflow: hidden;
 }
 
 .left_block p{
@@ -395,8 +396,17 @@ html, body{
     line-height: 40px;
 }
 
+.left_block_min_height{
+    height:220px;
+}
+
+.left_block_min_height img{
+    width:100%;
+    margin-top: 10px;
+}
+
 .right_block{
-    width:30%;
+    width:25%;
     height:auto;
     display:inline-block;
     position:relative;
@@ -405,6 +415,12 @@ html, body{
 .right_block img{
     width:100%;
     float:right;
+}
+
+.right_block_text{
+    padding:10px;
+    line-height:20px;
+    height:200px!important;
 }
 
 /***************/
@@ -418,6 +434,7 @@ html, body{
     margin: 17% 0 0 10%;
     position: absolute;
     box-shadow: 1px 1px 5px rgba(0,0,0,.5);;
+    z-index: 1;
 }
 
 .back_circle:hover{
@@ -467,6 +484,7 @@ section{
     position:relative;
     margin:auto;
     overflow: hidden;
+    min-width:700px;
 }
 
 .section_des{
@@ -476,7 +494,7 @@ section{
 }
 
 .section_des_full{
-    width: 100%;
+    width: 99%;
     padding:1%;
     line-height: 25px;
 }
@@ -486,6 +504,7 @@ section{
     float: left;
     padding:1%;
     line-height: 25px;
+    margin-top:20px;
 }
 
 .section_des_right{
@@ -501,6 +520,8 @@ section{
 }
 .section_des_right img{
     width:100%;
+    border-radius:5px;
+    margin-top: -20px;
 }
 
 .grey_block{
@@ -516,18 +537,17 @@ section{
 }
 
 .block_link{
+    text-align: right;
     bottom: 0;
     position: absolute;
-    width:70%;
-    margin-bottom: 3%;
-    text-align: right;
-    right: 10px;
+    width: 95%;
 }
 
 .block_1_link{
     font-size: 15px;
     font-weight: 700;
     width: 100%;
+    height: 40px;
     background: linear-gradient(to right, rgb(0, 200, 255) , yellow);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -624,4 +644,21 @@ section{
     padding: 5px;
     border-radius: 5px;
     min-height: 200px;
+}
+
+/**PROTOTYPE SECTION**/
+.prototype_icon{
+    width:30%;
+    webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    margin-top:40px;
+}
+
+.prototype_icon:hover{
+    cursor:pointer;
+    color-adjust:exact;
+}
+
+.wireframe_title{
+    width:50%;
 }
