--- a/css/content.css
+++ b/css/content.css
@@ -98,6 +98,24 @@ html, body{
           font-size:12px;
           font-weight: 700;
       }
+
+      /*TRANSITION STARTS*/
+      .fixed_items,.social_media { 
+        -webkit-animation: slide 0.5s forwards;
+        -webkit-animation-delay: 2s;
+        animation: slide 0.5s forwards;
+        animation-delay: 2s;
+        left: -100px;
+    } 
+
+    @-webkit-keyframes slide {
+        100% { left: 0; }
+    }
+    
+    @keyframes slide {
+        100% { left: 0; }
+    }
+      /*TRANSITION STARTS*/
   /*NAME / PROFESSION*/
   #index_content{
     width: 90%;
