--- a/css/slider.css
+++ b/css/slider.css
@@ -48,6 +48,7 @@
     font-size: 35px;
     font-weight: bold;
     z-index: 1;
+    text-shadow: 0.5px 0.5px 1px #fff;
   }
   
   .close:hover,
@@ -92,7 +93,7 @@
     /* width: 500px; */
     /* padding: 0 90px 0 20px; */
     /* margin-top: -50px; */
-    color:rgb(107, 107, 107);
+    color:black;
     font-weight: bold;
     font-size: 25px;
     transition: 0.6s ease;
@@ -101,7 +102,6 @@
     -webkit-user-select: none;
     bottom: 0;
     margin-bottom: 20px;
-    background-color: rgba(255,255,255,0.5);
   }
   
   /* Position the "next button" to the right */
@@ -114,35 +114,29 @@
   a.prev {
     width: 35%;
     text-align: right;
-    padding-right:5%;
   }
 
   a.next {
     width: 40%;
     text-align: left;
-    padding-left:2%;
-  }
-
-  .next_2{
-    padding:0 15% 0 5%;
-    color:rgba(107, 107, 107, 0.8);
-  }
-
-  .prev_2{
-    padding:0 12% 0 5%;
-    color:rgba(107, 107, 107, 0.8);
-  }
-
-  .next_3,.prev_3{
-    color:rgba(107, 107, 107, 0.5);
   }
   
+  .prev_bg,.next_bg{
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 20px;
+    padding: 5px 14px 5px 14px;
+    transition: 0.3s;
+  }
+
   /* On hover, add a black background color with a little bit see-through */
-  /*.prev:hover,
-  .next:hover, .next_2:hover, .next_3:hover {
-    /*background-color: rgba(0, 0, 0, 0.8);
-    color:#ffffff;;
-  }*/
+  .prev:hover,.next:hover {
+    color:#ffffff;
+  }
+
+  .prev_bg:hover,.next_bg:hover{
+    background-color: rgba(0,0,0,0.5);
+    transition: 0.3s;
+  }
   
   /* Number text (1/3 etc) */
   .numbertext {
