--- a/css/content.css
+++ b/css/content.css
@@ -103,8 +103,8 @@ html, body{
       .fixed_items,.social_media { 
         -webkit-animation: slide 0.5s forwards;
         -webkit-animation-delay: 2s;
-        animation: slide 0.5s forwards;
-        animation-delay: 2s;
+        animation: slide 1.5s forwards;
+        animation-delay: 0s;
         left: -100px;
     } 
 
@@ -566,7 +566,7 @@ section{
     font-weight: 700;
     width: 100%;
     height: 40px;
-    background: linear-gradient(to right, rgb(0, 200, 255) , yellow);
+    background: linear-gradient(to right, rgb(0, 200, 255) , rgb(204, 204, 0));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -669,14 +669,29 @@ section{
     width:30%;
     webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
-    margin-top:40px;
+    filter:invert(70%);
 }
 
 .prototype_icon:hover{
     cursor:pointer;
     color-adjust:exact;
+    filter:invert(0%);
 }
 
 .wireframe_title{
     width:50%;
+}
+
+/*iFRAME BookMe*/
+#portfolio-pdf iframe{
+    height:750px;
+}
+
+#BookMe-pdf iframe{
+    height:1050px;
+}
+
+#BookMe_workflow iframe{
+    width:95%;
+    height:800px;
 }
