--- a/css/content.css
+++ b/css/content.css
@@ -252,7 +252,7 @@ html, body{
 }
 
 .bck_gradient{
-    padding:1% 10%;
+    /*padding:1% 10%;*/
 }
 
 .block_1_title{
@@ -477,6 +477,11 @@ html, body{
     -webkit-transform: rotate(135deg);
   }
 
+  .right {
+    transform: rotate(-40deg);
+    -webkit-transform: rotate(-40deg);
+  }
+
 section{
     height:auto;
     overflow:hidden;
@@ -580,29 +585,41 @@ section{
     background-color:rgb(248, 248, 248);
     padding:3% 0;
 }
-
+/*
 .block_1_link:hover{
     background: linear-gradient(to right, rgb(255, 255, 255), rgb(0, 200, 255));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     border-color:black;
-}
-
+}*/
+/*
 .block_link{
     text-align: right;
     bottom: 0;
     position: absolute;
-    width: 95%;
-}
-
+    width: 95%
+}*/
+/*
 .block_1_link{
-    font-size: 15px;
+    font-size: 40px;
     font-weight: 700;
     width: 100%;
     height: 40px;
     background: linear-gradient(to right, rgb(0, 200, 255) , rgb(204, 204, 0));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}*/
+
+.project_link{
+    font-size:20px;
+    position:absolute;
+    bottom:0;
+    padding:15px;
+    color:white;
+    background:linear-gradient(to right, rgb(0, 200, 255) , rgb(255, 255, 177));
+}
+a.project_link:hover{
+    background: linear-gradient(to right, rgb(0, 160, 204) , rgb(189, 189, 0));
 }
 
 .block_sec_1, .block_sec_2, .block_sec_3{
@@ -649,7 +666,7 @@ section{
     margin:auto;
 }
 
-/**PERSONAL**/
+/**PERSONA**/
 .persona_img img{
     width: 70%;
     border-radius: 100%;
@@ -698,6 +715,7 @@ section{
     min-height: 200px;
 }
 
+
 /**PROTOTYPE SECTION**/
 .prototype_icon{
     width:30%;
@@ -734,4 +752,5 @@ section{
     height:800px;
     margin-top:15px;
 }
+
 
