--- a/css/content.css
+++ b/css/content.css
@@ -615,6 +615,7 @@ section{
     position:absolute;
     bottom:0;
     padding:15px;
+    border-radius:30px;
     color:white;
     background:linear-gradient(to right, rgb(0, 200, 255) , rgb(255, 255, 177));
 }
