--- a/css/content.css
+++ b/css/content.css
@@ -348,12 +348,13 @@ h5 a{
 }
 
 .block_text p{
-    font-size: 13px;
-    background-color:rgba(255, 255, 255, .85);
+    font-size: 15px;
+    background-color: rgba(255, 255, 255, .85);
     display: inline-block;
     padding: 5px 15px;
-    color:black;
-    border-radius: 25px 2px;
+    color: black;
+    border-radius: 20px;
+    font-weight: 900;
 }
 /*BLOCK TEXT OVERLAY ENDS*/
 
