--- a/css/media-query.css
+++ b/css/media-query.css
@@ -7,9 +7,12 @@
 
 @media (min-width: 1281px) {
   
-  //CSS
-  
+.block_1 ul li {
+    height: 150px;
 }
+
+  
+}/*ABOVE DESKTOP ENDS*/
 
 /* 
   ##Device = Laptops, Desktops
@@ -18,9 +21,9 @@
 
 @media (min-width: 1025px) and (max-width: 1280px) {
   
-  //CSS
+
   
-}
+}/*LAPTOPS, DESKTOP ENDS*/
 
 /* 
   ##Device = Tablets, Ipads (portrait)
