--- a/css/content.css
+++ b/css/content.css
@@ -178,8 +178,8 @@ html, body{
     -webkit-text-fill-color: transparent;
 }
 
-.intro h3{
-    padding: 2% 0 1% 0;
+.intro h4{
+    padding: 0 0 1% 0;
 }
 
 .intro h{
@@ -188,8 +188,19 @@ html, body{
 }
 
 #aboutme_contact_block{
-    margin-top:150px;
+    margin-top:50px;
 }
+
+#profile_photo{
+    width:300px;
+    height:300px;
+    margin: 1em 0 0 3.5em;
+}
+
+#profile_photo img{
+    width:100%; 
+    position:relative;
+    }
 
 h5{
     margin-top:15px;
